--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
+    "nipplejs": "^0.10.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "three": "^0.154.0",
